--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,20 @@
         line-height: 1.5rem;
     }
 
+    /* -------------------------------------- */
+        .btn{
+            background-color: var(--clr-primary);
+            color: var(--clr-whith);
+            padding: 0.375rem 0.75rem;
+            letter-spacing: 0.5px;
+            display: inline-block;
+            font-weight: 400;
+            transition: var(--transition);
+            font-size: 0.875rem;
+            cursor: pointer;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+
+        }
    /*---------------------- Navbar -------------------*/
 
 .nav-btn svg{
@@ -74,6 +88,7 @@
     cursor: pointer;
     height:40px;
     width: 40px;
+    z-index: 1;
 }
 
 #nav-check{
@@ -93,6 +108,7 @@
     height: 100%;
     transform: translateX(-100%);
     transition: var(--transition);
+    z-index: 3;
 
 }
 .navbar h3{
@@ -158,4 +174,47 @@
         width: 35%;
         max-width: 25rem; 
     }
+}
+
+/* -----------------Banner------------------ */
+.header{
+    min-height: 100vh;
+    background: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)), url(../img/banner-1.jpg) center/cover no-repeat fixed;   
+    position: relative;
+}
+
+.banner{
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.banner h2{
+    font-family: var(--ff-design);
+    color: transparent;
+    background-image: linear-gradient(180deg,var(--clr-primary), var(--clr-secondary));
+    background-clip:text;
+}
+
+.banner h1{
+    font-family: var(--ff-brand);
+    color: var(--clr-whith);
+    margin-top: 1.25rem;
+    margin-bottom: 2rem;
+    font-weight: 400;
+    text-shadow: 2px 5px 5px var(--clr-primary);
+}
+
+.banner-btn{
+    font-size: 1rem;
+    padding: 0.75rem 2rem;
+    border-radius: 1000px;
+    background-image: linear-gradient(180deg, var(--clr-primary) 80%, var(--clr-secondary));
+}
+
+.banner-btn:hover{
+    outline: 0.125rem solid var(--clr-primary);
+    outline-offset: 0.25rem;
 }
