--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,16 @@
             box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
 
         }
+
+        .btn:hover{
+            background-color: var(--clr-primary-light);
+        }
+
+        .clearfix::after,.clearfix::before{
+            content: "";
+            clear: both;
+            display:table;
+        }
    /*---------------------- Navbar -------------------*/
 
 .nav-btn svg{
@@ -217,4 +227,64 @@
 .banner-btn:hover{
     outline: 0.125rem solid var(--clr-primary);
     outline-offset: 0.25rem;
+}
+
+/* -------------divider----------- */
+.content-divider{
+    height: 0.5rem;
+    background-image: linear-gradient(to left,var(--clr-primary),var(--clr-secondary), var(--clr-primary));
+}
+/* ---------features------- */
+.features{
+    background-color: var(--clr-grey-3);
+    color: black;
+    cursor: pointer;
+}
+
+.feature{
+    padding: 2.5rem 0;
+    text-align: center;
+    transition: var(--transition);
+}
+
+.feature-icon svg{
+    fill: #000;
+    transition: var(--transition);   
+}
+.feature-title{
+    text-transform: uppercase;
+}
+
+.feature-text{
+    color: var(--clr-grey-2);
+    max-width: 17rem;
+    margin: 0 auto;
+}
+
+.feature:hover{
+    background-color: var(--clr-whith);
+    box-shadow: 0 2px var(--clr-primary);
+}
+
+.feature:hover .feature-title{
+    color: var(--clr-primary);
+}
+
+.feature:hover .feature-icon svg{
+    fill:var(--clr-primary);
+    transform: translateY(-5px);
+}
+
+@media screen and (min-width: 576px) {
+    .feature{
+        width: 50%;
+        float:left;
+    }
+
+}
+
+@media screen and (min-width: 1200px){
+    .feature{
+        width: 25%;
+    }
 }
